--- a/Android/app/src/main/res/layout/activity_options.xml
+++ b/Android/app/src/main/res/layout/activity_options.xml
@@ -10,6 +10,18 @@
         android:layout_marginTop="?attr/actionBarSize"
         android:orientation="vertical">
 
+        <!--<android.support.design.widget.TabLayout-->
+            <!--android:id="@+id/tabLayout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:tabBackground="@color/blue"-->
+            <!--app:tabIndicatorColor="@android:color/white"-->
+            <!--app:tabIndicatorHeight="6dp"-->
+            <!--app:tabMode="fixed"-->
+            <!--app:tabRippleColor="@android:color/transparent"-->
+            <!--app:tabSelectedTextColor="@android:color/white"-->
+            <!--app:tabTextColor="@color/white_trans40" />-->
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
@@ -18,7 +30,6 @@
             app:tabIndicatorColor="@android:color/white"
             app:tabIndicatorHeight="6dp"
             app:tabMode="fixed"
-            app:tabRippleColor="@android:color/transparent"
             app:tabSelectedTextColor="@android:color/white"
             app:tabTextColor="@color/white_trans40" />
 
