--- a/Android/app/src/main/res/layout/treenode_small_category.xml
+++ b/Android/app/src/main/res/layout/treenode_small_category.xml
@@ -7,10 +7,19 @@
     android:padding="@dimen/margin_normal">
 
     <ImageView
+        android:id="@+id/img_current"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/current" />
+
+    <ImageView
         android:id="@+id/img_avatar"
         android:layout_width="@dimen/margin_extra_large"
         android:layout_height="@dimen/margin_extra_large"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/margin_large"
         android:scaleType="fitXY"
         android:src="@drawable/ic_cloud" />
 
@@ -18,12 +27,25 @@
         android:id="@+id/txt_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/img_right_arrow"
+        android:layout_alignRight="@+id/txt_last_used"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/margin_normal"
+        android:layout_marginRight="130dp"
         android:layout_toRightOf="@+id/img_avatar"
         android:textColor="@color/grey"
         android:textSize="@dimen/textsize_normal" />
+
+    <TextView
+        android:id="@+id/txt_last_used"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/margin_normal"
+        android:layout_marginRight="10dp"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/expand"
+        android:visibility="visible"></TextView>
 
     <ImageView
         android:id="@+id/img_right_arrow"
