--- a/Android/app/src/main/res/values/dimens.xml
+++ b/Android/app/src/main/res/values/dimens.xml
@@ -43,5 +43,8 @@
     <dimen name="vertical_progress_height">12dp</dimen>
     <dimen name="vertical_progress_radius">6dp</dimen>
     <dimen name="vertical_thumb_size">50dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
 </resources>
